Spacing, color corrections
Spacing, color corrections

--- a/css/work.css
+++ b/css/work.css
@@ -490,6 +490,7 @@ nav a{
     font-weight: 800;
     font-size: 3.8em;
     margin: 0 auto;
+    letter-spacing: -1px;
 }
 .main .desc{
     /* A growing Product and Experience designer, fueled and driven by real world challenges with a passion of finding smart solutions to some difficult design problems. */
@@ -501,7 +502,7 @@ nav a{
     line-height: 1.5em;
     font-size: 1.5em;
     letter-spacing: 0.02em;
-    color: #aaaaaa;
+    color: #888;
     width: 100%;
     height: 7.875rem;
     margin: 0 auto;
@@ -631,7 +632,7 @@ a:hover{
     line-height: 3.6rem;
     font-size: 1.2rem;
     color: #000;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 #curefit2 .work_number{
     text-align: left;
@@ -640,7 +641,7 @@ a:hover{
     line-height: 3.6rem;
     font-size: 1.2rem;
     color: #fff;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 #okr .work_number{
     text-align: left;
@@ -649,7 +650,7 @@ a:hover{
     line-height: 3.6rem;
     font-size: 1.2rem;
     color: #fff;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 #talentbite .work_number{
     text-align: left;
@@ -658,7 +659,7 @@ a:hover{
     line-height: 3.6rem;
     font-size: 1.2rem;
     color: #fff;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }  
 #work .description .header{
     text-align: left;
@@ -669,6 +670,7 @@ a:hover{
     font-size: 3.2rem;
     color: #000;
     margin-bottom: 1.25rem;
+    letter-spacing: -1px;
 }
 #curefit2 .description .header {
     text-align: left;
@@ -708,9 +710,9 @@ a:hover{
     line-height: 2.6rem;
     font-size: 1.4rem;
     letter-spacing: .02em;
-    color: #999999;
-    margin-bottom: 2.5rem;
-    margin-top: .75rem;
+    color: #777;
+    margin-bottom: 4rem;
+/*    margin-top: .75rem;*/
 }
 #talentbite .description .sub-header{
     font-family: 'Poppins', sans-serif;
@@ -721,8 +723,8 @@ a:hover{
     font-size: 1.5rem;
     letter-spacing: .02em;
     color: #fff;
-    margin-bottom: 2.5rem;
-    margin-top: .75rem;
+    margin-bottom: 4rem;
+/*    margin-top: .75rem;*/
     opacity: .55;
 }
 #curefit2 .description .sub-header{
@@ -734,8 +736,8 @@ a:hover{
     font-size: 1.5rem;
     letter-spacing: .02em;
     color: #aaa;
-    margin-bottom: 2.5rem;
-    margin-top: .75rem;
+    margin-bottom: 4rem;
+/*    margin-top: .75rem;*/
 }
 #okr .description .sub-header{
     font-family: 'Poppins', sans-serif;
@@ -746,8 +748,8 @@ a:hover{
     font-size: 1.5rem;
     letter-spacing: .02em;
     color: #aaa;
-    margin-bottom: 2.5rem;
-    margin-top: .75rem;
+    margin-bottom: 4rem;
+/*    margin-top: .75rem;*/
 }
 #work .description a{
     text-align: left;
@@ -859,7 +861,7 @@ margin-top: 1.6em;
 /* Contact Part */
 #contact{
     margin-top: 0em;
-    padding-bottom: 6.5em;
+    padding-bottom: 7.5em;
 
     height: auto;
     position: relative;
@@ -878,6 +880,7 @@ margin-top: 1.6em;
     letter-spacing: 0.02em;
     color: #000;
     width: 100vw;
+    letter-spacing: -1.4px;
 }
 #contact .contactdesc{
     font-weight: normal;
@@ -921,7 +924,7 @@ margin-top: 1.6em;
     text-align: center;
     letter-spacing: 0.02em;
 
-    color: #AAAAAA;
+    color: #888;
 
 }
 .dribble-link a{
